--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>eCommerce-business-site</title>
     <link rel="stylesheet" href="./syle.css">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <!-- Nav section -->
         <nav class="container">
             <figure>
                 <img src="./images/logo.png" alt="">
@@ -29,6 +34,24 @@
                 <li><a href="">Contact Us</a></li>
             </ul>
         </nav>
+
+        <!-- Banner Section -->
+        <section class="banner container">
+            <!-- Banner left -->
+            <div>
+                <h2>Mi LED TV 4A PRO 32</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor 
+                    do amet sint. Velit officia consequat duis enim velit mollit. 
+                    Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <span class="banner-price">$1289</span> 
+                <button class="panda-btn">BUY NOW <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <!-- Banner Right -->
+            <div>
+                <img src="images/banner-images/tv.png" alt="">
+            </div>
+        </section>
     </header>
 
     <main>
